--- a/config/.env
+++ b/config/.env
@@ -1,2 +1,3 @@
-MONGODB_URI=mongodb+srv://sami:sami1987@crud.dndehun.mongodb.net/crud
 
+
+DATABASE_URL=mongodb+srv://sami:sami1987@crud.dndehun.mongodb.net/
