--- a/config/.env
+++ b/config/.env
@@ -1,4 +1,4 @@
 
-CLIENT_URL=https://front-crud-one.vercel.app/
+CLIENT_URL=http://localhost:3000
 DATABASE_URL=mongodb+srv://sami:sami1987@crud.dndehun.mongodb.net/crud
 TOKEN_SECRET=amun58d3ddhpf34dvf926s9vbg692d2wc6dc4vfb
