--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
     ]
     "headers": [
         {
-            "source":"/(.*)",
+            "source":"/api/(.*)",
             "headers":[
                 {"key": "Acces-Control-Allow-Credentials", "value": "true"},
                 {"key": "Acces-Control-Allow-Origin", "value": "*"},
