--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,38 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/index.js"
-      }
-    ]
-    "headers": [
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
         {
-            "source":"/(.*)",
-            "headers":[
-                {"key": "Acces-Control-Allow-Credentials", "value": "true"},
-                {"key": "Acces-Control-Allow-Origin", "value": "*"},
-                {"key": "Acces-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"},
-                {"key": "Acces-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept"},
-            ]
+          "key": "Access-Control-Allow-Credentials",
+          "value": "true"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "X-CSRF-Token, X-Requested-With, Accept"
         }
-    ]
-  }
-  
+      ]
+    }
+  ]
+}
